# INFRA-study

./: Dockerfile  README.md  pyproject.toml
week1/: Dockerfile  main.py
week2/: ebs_test.py  efs_test.py  lambda_handler.py  s3_test.py
week3/: dynamodb_test.py  rds_test.py  redis.py  redis_test.py  redshift_test.py  tester.py
